      differ from 3.3  
      
SC32: The pipeline DOXmlToDataObject -> DataObjectToOrderedMap will fail if the incoming
      DOXML contains more than one top-level data object. 
      Note that as a side-efffect, the default value for 'box returned arrays' in the
      AbstractConvertor class has changed from 3.3 (true) to 'false'.
      
=================================================
openadaptor3 production 3.3 Release Notes

See licences/licence.txt for Licence information.
=================================================

Date: 5th October 2007
Author: openadaptor Core Team

openadaptor 3.3
=======

Summary
=======
This is the third release of openadaptor 3

The openadaptor white paper can be downloaded from:

https://www.openadaptor.org/docs/whitepaper.pdf


This release focuses on stabilization. A number of areas have been reworked
or significantly enhanced.

==============================================================================

Major Changes
=============

This section details the main changes and enhancements in openadaptor 3.3

Documentation
=============

No major changes. Ongoing improvements to JavaDocs and to Examples.

Configuration
=============

No major changes. Some detail changes have been made to the configuration of 
individual components. See these separately for details.

Database
========

JDBC Read Connectors & Polling Read Connectors
----------------------------------------------

JDBC read connectors and polling read connectors have undergone a significant 
rework: 

  * The concept of an IPollingReadConnector that wraps another read connector 
    has been introduced. An IPollingReadConnector basically defines the way the 
    underlying read connector will poll its resource. The idea follows the 
    Decorator design pattern and is similar to how input and output streams 
    can be 'wrapped' in the Java I/O API

  * Three implementations of IPollingReadConnector have been implemented: 